--- a/world/libdwarf/PKGBUILD
+++ b/world/libdwarf/PKGBUILD
@@ -1,43 +1,47 @@
-# Maintainer: Massimiliano Torromeo <massimiliano.torromeo@gmail.com>
+# Maintainer: George Rawlinson <grawlinson@archlinux.org>
+# Contributor: Massimiliano Torromeo <massimiliano.torromeo@gmail.com>
 # Contributor: Alain Kalker <a.c.kalker@gmail.com>
 # Contributor: Marti Raudsepp <marti@juffo.org>
 
 pkgname=libdwarf
 epoch=1
-pkgver=0.12.0
+pkgver=2.0.0
 pkgrel=1
-pkgdesc="A library for handling DWARF Debugging Information Format"
-arch=(x86_64)
-license=('GPL' 'LGPL')
-url="https://www.prevanders.net/dwarf.html"
-depends=('elfutils')
+pkgdesc='A library for handling DWARF Debugging Information Format'
+arch=('x86_64')
+url='https://www.prevanders.net/dwarf.html'
+license=('LGPL-2.1-only' 'GPL-2.0-only' 'BSD-2-Clause' 'BSD-3-Clause' 'LicenseRef-libdwarf-public-domain')
+depends=('glibc' 'elfutils' 'zlib' 'zstd')
+makedepends=('git' 'meson')
 checkdepends=('python')
 provides=('libdwarf.so')
-options+=('staticlibs' 'debug')
-#_commit="245262d6ccaeed17f7564c31b78da2d4df1a3ee0"
-#source=(https://sourceforge.net/code-snapshots/git/l/li/libdwarf/code.git/libdwarf-code-$_commit.zip)
-source=(https://www.prevanders.net/libdwarf-$pkgver.tar.xz)
-sha512sums=('64d99bcb1436d3ad1faacc3f43b7b42c80ae236b6de3d66a132a72d452bc220b12de430ec99b827fb051badc683fc237f4f8fa8f7d67749ed5b81284ae5fbd2e')
+options=('staticlibs')
+source=("$pkgname::git+https://github.com/davea42/libdwarf-code#tag=libdwarf-$pkgver")
+sha512sums=('94d1a1be4db8082130451f5d50e8734e041cbbb6ae16bf5f32668c1431a7cb9b6859a9e1d0b4b9beff95fb36b8aad434ba5ed21be5f7ffa59a0db7707cbbc01e')
+b2sums=('d3ff335909c2eb58abc442dd6b134f530e11ff41be54a7e0128df8be7256609a587a25545a5954c13d0072b024bd3c591188b73760c08807107cf78939e1f04d')
 
 build() {
-  cd "$srcdir"/libdwarf-$pkgver
-  # cd "$srcdir"/libdwarf-code-$_commit
-  CFLAGS+=" -ffat-lto-objects"
-  ./configure --prefix=/usr --includedir=/usr/include/libdwarf --enable-shared
-  make
+  CFLAGS+=' -ffat-lto-objects'
+
+  artix-meson "$pkgname" build -Ddwarfexample=true
+
+  meson compile -C build
 }
 
 check() {
-  cd "$srcdir"/libdwarf-$pkgver
-  # cd "$srcdir"/libdwarf-code-$_commit
-  make -j1 check
+  meson test -C build -j1
 }
 
 package() {
-  cd "$srcdir"/libdwarf-$pkgver
-  # cd "$srcdir"/libdwarf-code-$_commit
-  make DESTDIR="$pkgdir" install
+  meson install -C build --destdir "$pkgdir"
 
-  install -dm755 "$pkgdir"/usr/share/doc/$pkgname
-  install -m644 README NEWS "$pkgdir"/usr/share/doc/$pkgname/
+  cd "$pkgname"
+
+  # documentation
+  install -vDm644 -t "$pkgdir/usr/share/doc/$pkgname" README NEWS
+
+  # license
+  install -vDm644 -t "$pkgdir/usr/share/licenses/$pkgname" \
+    COPYING src/lib/libdwarf/LIBDWARFCOPYRIGHT \
+    src/bin/dwarfdump/DWARFDUMPCOPYRIGHT
 }
