--- a/world/cbindgen/PKGBUILD
+++ b/world/cbindgen/PKGBUILD
@@ -1,7 +1,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=cbindgen
-pkgver=0.28.0
+pkgver=0.29.0
 pkgrel=1
 pkgdesc="A tool for generating C bindings to Rust code"
 url="https://github.com/mozilla/cbindgen"
@@ -21,24 +21,24 @@ checkdepends=(
   python
 )
 options=(!lto)
-source=("git+$url#tag=$pkgver")
-b2sums=('8c93d193e8a40936e8bb5f72329477f8cff3fc62809441de669cffecf030fad32c6bf72858a609576759aeb06c9c26eb81c35a9438c089d063d9ca4145d60e82')
+source=("git+$url#tag=v$pkgver")
+b2sums=('6985ba725835c0ce031d6a3501aa50d13521a88d32186d6bcf8aac5c018588bd153253fa6f6d4a2c18d273e9bc6306ab7722793d4fc42bfe6d020b3c653c79c2')
 
 prepare() {
   cd cbindgen
-  cargo fetch --locked --target x86_64-unknown-linux-gnu
+  cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
 }
 
 build() {
   cd cbindgen
 
   # Use debug
-  export CARGO_PROFILE_RELEASE_DEBUG=2
+  export CARGO_PROFILE_RELEASE_DEBUG=2 CARGO_PROFILE_RELEASE_STRIP=false
 
   # Use LTO
   export CARGO_PROFILE_RELEASE_LTO=true CARGO_PROFILE_RELEASE_CODEGEN_UNITS=1
 
-  cargo build --release --frozen --all-targets
+  cargo build --release --frozen
 }
 
 check() {
