--- a/world/papers/.artixlinux/pkgbase.yaml
+++ b/world/papers/.artixlinux/pkgbase.yaml
@@ -1,57 +1,61 @@
 ---
 team: world
-pkgbase:
-  name: papers
-  version: 48.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - papers
-    - papers-lib-docs
 actions:
   addRepo: world
-  removeRepo: world-goblins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 48.2-1
+    version: 48.3-1
     packages:
-      - papers-48.2-1-x86_64.pkg.tar.zst
-      - papers-lib-docs-48.2-1-x86_64.pkg.tar.zst
+      - papers-48.3-1-x86_64.pkg.tar.zst
+      - papers-lib-docs-48.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
