--- a/world/prrte/.artixlinux/pkgbase.yaml
+++ b/world/prrte/.artixlinux/pkgbase.yaml
@@ -1,12 +1,4 @@
 ---
-pkgbase:
-  name: prrte
-  version: 3.0.9-1
-  arch:
-    - x86_64
-  pkgname:
-    - prrte
-    - prrte-docs
 actions:
   addRepo: world
   removeRepo: world-gremlins
@@ -19,39 +11,51 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 3.0.9-1
+    version: 3.0.11-1
     packages:
-      - prrte-3.0.9-1-x86_64.pkg.tar.zst
-      - prrte-docs-3.0.9-1-x86_64.pkg.tar.zst
+      - prrte-3.0.11-1-x86_64.pkg.tar.zst
+      - prrte-docs-3.0.11-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
