--- a/world/totem/.artixlinux/pkgbase.yaml
+++ b/world/totem/.artixlinux/pkgbase.yaml
@@ -29,9 +29,9 @@ repos:
     packages: []
     debug: []
   world:
-    version: 43.1+r44+gbf65cd39c-1
+    version: 43.2-1
     packages:
-      - totem-43.1+r44+gbf65cd39c-1-x86_64.pkg.tar.zst
+      - totem-43.2-1-x86_64.pkg.tar.zst
     debug: []
   lib32-goblins:
     version: null
