--- a/system/glib2/.artixlinux/pkgbase.yaml
+++ b/system/glib2/.artixlinux/pkgbase.yaml
@@ -1,13 +1,4 @@
 ---
-pkgbase:
-  name: glib2
-  version: 2.84.1-1
-  arch:
-    - x86_64
-  pkgname:
-    - glib2
-    - glib2-devel
-    - glib2-docs
 actions:
   addRepo: system
   removeRepo: system-gremlins
@@ -20,40 +11,52 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
-    version: 2.84.1-1
+    version: 2.84.2-1
     packages:
-      - glib2-2.84.1-1-x86_64.pkg.tar.zst
-      - glib2-devel-2.84.1-1-x86_64.pkg.tar.zst
-      - glib2-docs-2.84.1-1-x86_64.pkg.tar.zst
+      - glib2-2.84.2-1-x86_64.pkg.tar.zst
+      - glib2-devel-2.84.2-1-x86_64.pkg.tar.zst
+      - glib2-docs-2.84.2-1-x86_64.pkg.tar.zst
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
     version: null
     packages: []
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: system
