--- a/lib32/wine-staging/.artixlinux/pkgbase.yaml
+++ b/lib32/wine-staging/.artixlinux/pkgbase.yaml
@@ -1,6 +1,6 @@
 ---
 actions:
-  addRepo: lib32
+  addRepo: lib32-gremlins
   removeRepo: null
   triggersBuild: true
   triggersRebuild: false
@@ -37,8 +37,9 @@ repos:
     packages: []
     debug: []
   lib32-gremlins:
-    version: null
-    packages: []
+    version: 10.8-1
+    packages:
+      - wine-staging-10.8-1-x86_64.pkg.tar.zst
     debug: []
   lib32:
     version: 10.8-1
