--- a/world/timew/PKGBUILD
+++ b/world/timew/PKGBUILD
@@ -3,7 +3,7 @@
 
 pkgname=timew
 pkgver=1.8.0
-pkgrel=1
+pkgrel=2
 pkgdesc="Timewarrior, A command line time tracking application"
 arch=('x86_64')
 url="https://timewarrior.net/"
@@ -30,6 +30,10 @@ package() {
     # Install the refresh holiday scripts in /usr/bin/ for user convenience.
     chmod 755 "${pkgdir}"/usr/share/doc/timew/holidays/refresh
     ln -s /usr/share/doc/timew/holidays/refresh "${pkgdir}"/usr/bin/timew-refresh-holidays
+
+    install -Dm 644 completion/timew-completion.bash "${pkgdir}/usr/share/bash-completion/completions/timew"
+    install -Dm 644 completion/timew.zsh "${pkgdir}/usr/share/zsh/site-functions/_timew"
+    install -Dm 644 completion/timew.fish "${pkgdir}/usr/share/fish/vendor_completions.d/timew.fish"
 
     install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${pkgname}"
 }
