--- a/world/hidapi/.artixlinux/pkgbase.yaml
+++ b/world/hidapi/.artixlinux/pkgbase.yaml
@@ -1,11 +1,4 @@
 ---
-pkgbase:
-  name: hidapi
-  version: 0.14.0-3
-  arch:
-    - x86_64
-  pkgname:
-    - hidapi
 actions:
   addRepo: world
   removeRepo: null
@@ -18,38 +11,50 @@ repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.14.0-3
+    version: 0.15.0-1
     packages:
-      - hidapi-0.14.0-3-x86_64.pkg.tar.zst
+      - hidapi-0.15.0-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
