--- a/world/wireplumber/.artixlinux/pkgbase.yaml
+++ b/world/wireplumber/.artixlinux/pkgbase.yaml
@@ -1,59 +1,62 @@
 ---
-pkgbase:
-  name: wireplumber
-  version: 0.5.8-1
-  arch:
-    - x86_64
-  pkgname:
-    - wireplumber
-    - libwireplumber
-    - wireplumber-docs
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
     version: null
     packages: []
+    debug: []
   world:
-    version: 0.5.8-1
+    version: 0.5.10-1
     packages:
-      - wireplumber-0.5.8-1-x86_64.pkg.tar.zst
-      - libwireplumber-0.5.8-1-x86_64.pkg.tar.zst
-      - wireplumber-docs-0.5.8-1-x86_64.pkg.tar.zst
+      - wireplumber-0.5.10-1-x86_64.pkg.tar.zst
+      - libwireplumber-0.5.10-1-x86_64.pkg.tar.zst
+      - wireplumber-docs-0.5.10-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
