--- a/world/wireplumber/PKGBUILD
+++ b/world/wireplumber/PKGBUILD
@@ -7,7 +7,7 @@ pkgname=(
   libwireplumber
   wireplumber-docs
 )
-pkgver=0.5.8
+pkgver=0.5.10
 pkgrel=1
 pkgdesc="Session / policy manager implementation for PipeWire"
 url="https://pipewire.pages.freedesktop.org/wireplumber/"
@@ -35,7 +35,7 @@ checkdepends=(pipewire-audio)
 source=(
   "git+https://gitlab.freedesktop.org/pipewire/$pkgbase.git#tag=$pkgver"
 )
-b2sums=('c3dc0299653a298d30dbd931e398c1f2eab62e1309ce0a3ad3e7fa806d22c4ce334ce20e57543b571f1fce9de895e2b1be4013f77215f849a61a84fc20b5f4b3')
+b2sums=('5c9d06c4084187ce172e98fb05bef3826e4b7bf1fba505e5543fec0e194d8a957172c81e6fa32c7f53832e204dd794189d48deaae5eca10577b04106f2625ff3')
 
 prepare() {
   cd $pkgbase
@@ -96,7 +96,7 @@ package_wireplumber() {
     _pick libw usr/include
     _pick libw usr/share/gir-1.0
 
-    _pick docs usr/share/doc
+    _pick docs usr/share/doc/wireplumber/html
   )
 
   install -Dt "$pkgdir/usr/share/doc/$pkgname" -m644 $pkgbase/{NEWS,README}*
