--- a/world/python-cryptography/.artixlinux/pkgbase.yaml
+++ b/world/python-cryptography/.artixlinux/pkgbase.yaml
@@ -1,55 +1,61 @@
 ---
-pkgbase:
-  name: python-cryptography
-  version: 44.0.2-1
-  arch:
-    - x86_64
-  pkgname:
-    - python-cryptography
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
     version: null
     packages: []
+    debug: []
   system-gremlins:
     version: null
     packages: []
+    debug: []
   system:
     version: null
     packages: []
+    debug: []
   world-goblins:
     version: null
     packages: []
+    debug: []
   world-gremlins:
-    version: null
-    packages: []
-  world:
-    version: 44.0.2-1
+    version: 44.0.3-1
     packages:
-      - python-cryptography-44.0.2-1-x86_64.pkg.tar.zst
+      - python-cryptography-44.0.3-1-x86_64.pkg.tar.zst
+    debug: []
+  world:
+    version: 44.0.3-1
+    packages:
+      - python-cryptography-44.0.3-1-x86_64.pkg.tar.zst
+    debug: []
   lib32-goblins:
     version: null
     packages: []
+    debug: []
   lib32-gremlins:
     version: null
     packages: []
+    debug: []
   lib32:
     version: null
     packages: []
+    debug: []
   galaxy-goblins:
     version: null
     packages: []
+    debug: []
   galaxy-gremlins:
     version: null
     packages: []
+    debug: []
   galaxy:
     version: null
     packages: []
+    debug: []
 team: world
